<resources>
    <string name="app_name">MVVM-Sample</string>

    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_books">Books</string>
    <string name="bottom_menu_search">Search</string>
    <string name="bottom_menu_music">Music</string>
    <string name="bottom_menu_profile">Profile</string>

    <string name="search_select_music">Music</string>
    <string name="search_select_books">Books</string>
    <string name="search_first_option">Artist</string>
    <string name="search_second_option">Album</string>

    <string name="search_field_hint">Search</string>
    <string name="search_item_followers">Followers %1$d</string>
    <string name="search_error">An error occurred, try again later</string>
</resources>
