<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuPageOne"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_menu_home" />
    <item
        android:id="@+id/menuPageTwo"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/bottom_menu_books" />
    <item
        android:id="@+id/menuPageThree"
        android:icon="@drawable/ic_search"
        android:title="@string/bottom_menu_search" />
    <item
        android:id="@+id/menuPageFour"
        android:icon="@drawable/ic_music"
        android:title="@string/bottom_menu_music" />
    <item
        android:id="@+id/menuPageFive"
        android:icon="@drawable/ic_person"
        android:title="@string/bottom_menu_profile" />
</menu>
